# LADOCK

./: .gitignore  LICENSE  README.md  docking.py  install.bat  install.sh  ladock-wsl.bat  ladock-wsl.sh  ladock.bat  ladock.desktop  ladock.ps1  ladock.sh  main.py  project.json  pyproject.toml  requirements.txt
.github/workflows/: build-installers.yml
HAKI/HakCipta/: Biodata_Pencipta.docx  Biodata_Pencipta.md  Karya_Cipta_Deskripsi_Ciptaan_LADOCK.docx  Karya_Cipta_Deskripsi_Ciptaan_LADOCK.md  Karya_Cipta_LADOCK_LENGKAP.docx  Karya_Cipta_LADOCK_LENGKAP.md  Karya_Cipta_Source_Code_LADOCK.docx  Karya_Cipta_Source_Code_LADOCK.md  Surat_Pengalihan_Hak_Cipta.docx  Surat_Pengalihan_Hak_Cipta.md  Surat_Pernyataan.docx  Surat_Pernyataan.md
HAKI/Merek/: Data_Pemohon_dan_Merek.docx  Data_Pemohon_dan_Merek.md  Surat_Kuasa.docx  Surat_Kuasa.md  Surat_Pernyataan_Kepemilikan_Merek.docx  Surat_Pernyataan_Kepemilikan_Merek.md
app/: about_dialog.py  license_dialog.py  main_window.py  project_manager.py  settings_dialog.py
config/: example.smi
core/: __init__.py  file_manager.py  job_scheduler.py  license_manager.py  ligand_importer.py  ligand_smiles.py  task_manager.py  tool_paths.py
data/: __init__.py  ligand_library.py  project.py  result_parser.py
desktop/: install.bat  install.sh  ladock.bat  ladock.sh  ladock_entry.py  pyproject.toml  requirements.txt
desktop/app/: about_dialog.py  documentation_dialog.py  license_dialog.py  main_window.py  project_manager.py  settings_dialog.py
desktop/core/: __init__.py  docking_features.py  job_scheduler.py  license_manager.py  ligand_importer.py  render_smiles_svg.py  resources.py  tool_paths.py  wsl_backend.py
desktop/data/: __init__.py  project.py
desktop/engine/: __init__.py  mol_prep.py  (+3 more)
engine/: __init__.py  docking_engine.py  mol_prep.py  tool_detector.py
ligPocket/: data.pkl  ligPocket.cfg  rigidReceptor.A.map  rigidReceptor.Br.map  rigidReceptor.Ca.map  rigidReceptor.Cl.map  rigidReceptor.F.map  rigidReceptor.Fe.map  rigidReceptor.H.map  rigidReceptor.HS.map  rigidReceptor.I.map  rigidReceptor.J.map  rigidReceptor.Mg.map  rigidReceptor.Mn.map  rigidReceptor.N.map  rigidReceptor.NA.map  rigidReceptor.NS.map  rigidReceptor.OS.map  rigidReceptor.P.map  rigidReceptor.S.map  rigidReceptor.SA.map  rigidReceptor.W.map  rigidReceptor.Z.map  rigidReceptor.Zn.map  rigidReceptor.d.map  rigidReceptor.e.map  rigidReceptor.glg  rigidReceptor.gpf  rigidReceptor.maps.fld  rigidReceptor.maps.xyz  rigidReceptor.pdbqt  translationPoints.npy
tools/: generate_license.py
website/: docs.html  features.html  index.html
(+91 files in other folders)
