[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ladock-desktop"
version = "2.0.0"
description = "Open-source molecular docking workstation with PySide6 GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["molecular docking", "cheminformatics", "autodock", "vina", "computational chemistry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "PySide6>=6.5",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
rdkit = ["rdkit>=2023.3"]
full  = ["rdkit>=2023.3"]

[project.urls]
Homepage    = "https://github.com/laode-aman-ung/LADOCK"
Repository  = "https://github.com/laode-aman-ung/LADOCK"
"Bug Tracker" = "https://github.com/laode-aman-ung/LADOCK/issues"

[project.scripts]
ladock = "ladock_entry:main"

[project.gui-scripts]
ladock-gui = "ladock_entry:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "core*", "data*", "engine*", "gui*"]

[tool.setuptools.py-modules]
# Include top-level modules needed by the entry point
_ = []

[tool.setuptools.package-data]
"gui.assets" = ["*.html", "*.js", "*.css"]
"config"     = ["*.txt", "*.csv", "*.mol", "*.mol2", "*.pdb", "*.smi", "*.sdf"]
